--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -35,13 +35,14 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/username_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="335dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         app:boxCornerRadiusBottomEnd="8dp"
         app:boxCornerRadiusBottomStart="8dp"
         app:boxCornerRadiusTopEnd="8dp"
         app:boxCornerRadiusTopStart="8dp"
+        android:layout_marginHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tx_deskripsi_daftar">
@@ -56,16 +57,17 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/email_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="335dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:boxCornerRadiusBottomEnd="8dp"
         app:boxCornerRadiusBottomStart="8dp"
         app:boxCornerRadiusTopEnd="8dp"
         app:boxCornerRadiusTopStart="8dp"
+        android:layout_marginHorizontal="20dp"
         app:layout_constraintTop_toBottomOf="@id/username_layout"
-        app:layout_constraintStart_toStartOf="@id/username_layout"
-        app:layout_constraintEnd_toEndOf="@id/username_layout">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ed_email_register"
             android:layout_width="match_parent"
@@ -75,7 +77,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/password_layout"
-        android:layout_width="335dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:endIconMode="password_toggle"
@@ -83,10 +85,11 @@
         app:boxCornerRadiusBottomStart="8dp"
         app:boxCornerRadiusTopEnd="8dp"
         app:boxCornerRadiusTopStart="8dp"
+        android:layout_marginHorizontal="20dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:layout_constraintTop_toBottomOf="@id/email_layout"
-        app:layout_constraintStart_toStartOf="@id/email_layout"
-        app:layout_constraintEnd_toEndOf="@id/email_layout">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ed_password_register"
             android:layout_width="match_parent"
@@ -96,7 +99,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/repeat_password_layout"
-        android:layout_width="335dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:endIconMode="password_toggle"
@@ -106,8 +109,9 @@
         app:boxCornerRadiusTopStart="8dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:layout_constraintTop_toBottomOf="@id/password_layout"
-        app:layout_constraintStart_toStartOf="@id/password_layout"
-        app:layout_constraintEnd_toEndOf="@id/password_layout">
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ed_confirm_password_register"
             android:layout_width="match_parent"
@@ -117,14 +121,15 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_register"
-        android:layout_width="335dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/biru_muda"
         android:text="@string/register"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@id/repeat_password_layout"
-        app:layout_constraintStart_toStartOf="@id/repeat_password_layout"
-        app:layout_constraintEnd_toEndOf="@id/repeat_password_layout"/>
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tx_atau_daftar_dengan"
@@ -204,7 +209,7 @@
         android:textColor="@color/hitam"
         android:textSize="14sp"
         android:layout_marginTop="24dp"
-        android:layout_marginStart="-16dp"
+        android:layout_marginStart="10dp"
         android:fontFamily="@font/inter_regular"
         app:layout_constraintTop_toBottomOf="@id/constrain_google"
         app:layout_constraintStart_toStartOf="@id/constrain_google"
@@ -214,12 +219,13 @@
         android:id="@+id/btn_masuk_disini"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="-10dp"
         android:text="@string/login"
         android:textColor="@color/biru_muda"
-        android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="@id/tx_sudah_punya_akun"
+        app:layout_constraintBottom_toBottomOf="@id/tx_sudah_punya_akun"
+        app:layout_constraintEnd_toEndOf="@+id/constrain_google"
         app:layout_constraintStart_toEndOf="@id/tx_sudah_punya_akun"
-        app:layout_constraintBottom_toBottomOf="@id/tx_sudah_punya_akun"/>
+        app:layout_constraintTop_toTopOf="@id/tx_sudah_punya_akun" />
 
     <ProgressBar
         android:id="@+id/pb_Register"
