--- a/app/src/main/res/layout/list_doa.xml
+++ b/app/src/main/res/layout/list_doa.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
+    android:id="@+id/cv_doa"
     app:cardElevation="20dp"
     android:layout_gravity="center">
 
@@ -11,47 +12,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_name_doa"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="94dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/prayer_before_sleeping"
-            android:textColor="@color/hitam"
-            android:textSize="16sp"
-            android:fontFamily="@font/inter_semibold"
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/iv_list_doa"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:src="@drawable/ic_list_doa"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_doa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="بِاسْمِ اللهِ اللَّهُمَّ إِنِّي أَعُوْذُ بِكَ مِنَ الْخُبُثِ وَالْخَبَاءِثِ"
-            android:fontFamily="@font/inter_regular"
-            android:textColor="@color/hitam"
+            android:text="Doa Sebelum Tidur"
             android:textSize="16sp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_name_doa"
-            app:layout_constraintStart_toStartOf="@id/tv_name_doa"
-            app:layout_constraintEnd_toEndOf="@id/tv_name_doa"/>
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_arti"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Dengan nama-Mu ya Allah, aku hidup dan aku mati."
-            android:fontFamily="@font/inter_regular"
-            android:textColor="@color/hitam"
-            android:textSize="12sp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="44dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_doa"
-            app:layout_constraintStart_toStartOf="@id/tv_doa"
-            app:layout_constraintEnd_toEndOf="@id/tv_doa"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:textColor="@color/black"
+            android:fontFamily="@font/inter_semibold"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="106dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_list_doa"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
