--- a/app/src/main/res/layout/list_doa.xml
+++ b/app/src/main/res/layout/list_doa.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
     android:id="@+id/cv_doa"
     app:cardElevation="20dp"
+    android:layout_marginVertical="16dp"
     android:layout_gravity="center">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,14 +24,13 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_doa"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Doa Sebelum Tidur"
             android:textSize="16sp"
             android:textColor="@color/black"
             android:fontFamily="@font/inter_semibold"
             android:layout_marginStart="24dp"
-            android:layout_marginEnd="106dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
