--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="abu_abu">#848282</color>
     <color name="putih">#F0F3F5</color>
     <color name="biru_gelap">#1388A7</color>
+    <color name="hijau_persian">#13A795</color>
     <color name="merah">#EA546C</color>
 </resources>
