--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -15,7 +15,9 @@
             app:destination="@id/loginFragment" />
         <action
             android:id="@+id/action_splashScreenFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/main_nav"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -27,7 +29,9 @@
             app:destination="@id/registerFragment" />
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/main_nav"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
@@ -49,6 +53,9 @@
         <action
             android:id="@+id/action_homeFragment_to_doaFragment"
             app:destination="@id/doaFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_settingFragment"
+            app:destination="@id/settingFragment" />
     </fragment>
     <fragment
         android:id="@+id/materiBelajarFragment"
@@ -91,5 +98,33 @@
         <action
             android:id="@+id/action_doaFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_doaFragment_to_detailDoaFragment"
+            app:destination="@id/detailDoaFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailDoaFragment"
+        android:name="com.fikrihaikal.qurancall.ui.detaildoa.DetailDoaFragment"
+        android:label="fragment_detail_doa"
+        tools:layout="@layout/fragment_detail_doa" >
+        <argument
+            android:name="id"
+            app:argType="string"
+            app:nullable="true" />
+        <action
+            android:id="@+id/action_detailDoaFragment_to_doaFragment"
+            app:destination="@id/doaFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/settingFragment"
+        android:name="com.fikrihaikal.qurancall.ui.setting.SettingFragment"
+        android:label="fragment_setting"
+        tools:layout="@layout/fragment_setting" >
+        <action
+            android:id="@+id/action_settingFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_settingFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
     </fragment>
 </navigation>
