--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -50,7 +50,8 @@
             android:id="@+id/ed_email_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/input_email"/>
+            android:hint="@string/input_email"
+            android:inputType="textEmailAddress"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -72,7 +73,8 @@
             android:id="@+id/ed_password_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/input_password"/>
+            android:hint="@string/input_password"
+            android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
