--- a/app/src/main/res/layout/fragment_detail_doa.xml
+++ b/app/src/main/res/layout/fragment_detail_doa.xml
@@ -49,7 +49,7 @@
         android:text="Bismillahirrahmannirrahiim"
         android:textSize="12sp"
         android:fontFamily="@font/inter_medium"
-        android:textColor="@color/hijau_persian"
+        android:textColor="@color/hijau_persian_500"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/tv_name_doa"
         app:layout_constraintStart_toStartOf="@id/tv_name_doa"/>
