--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -59,6 +59,9 @@
         <action
             android:id="@+id/action_homeFragment_to_pilihGuruFragment"
             app:destination="@id/pilihGuruFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_detailSambungAyatFragment"
+            app:destination="@id/detailSambungAyatFragment" />
     </fragment>
     <fragment
         android:id="@+id/materiBelajarFragment"
@@ -179,5 +182,33 @@
         android:id="@+id/detailSurahFragment"
         android:name="com.fikrihaikal.qurancall.ui.detailsurah.DetailSurahFragment"
         android:label="fragment_detail_surah"
-        tools:layout="@layout/fragment_detail_surah" />
+        tools:layout="@layout/fragment_detail_surah" >
+        <action
+            android:id="@+id/action_detailSurahFragment_to_surahFragment"
+            app:destination="@id/surahFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/surahFragment"
+        android:name="com.fikrihaikal.qurancall.ui.alquran.viewpager.surah.SurahFragment"
+        android:label="fragment_surah"
+        tools:layout="@layout/fragment_surah" >
+        <action
+            android:id="@+id/action_surahFragment_to_detailSurahFragment"
+            app:destination="@id/detailSurahFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/juzFragment"
+        android:name="com.fikrihaikal.qurancall.ui.alquran.viewpager.juz.JuzFragment"
+        android:label="fragment_juz"
+        tools:layout="@layout/fragment_juz" />
+    <fragment
+        android:id="@+id/pilihSurahFragment"
+        android:name="com.fikrihaikal.qurancall.ui.sambungayat.pilihsurah.PilihSurahFragment"
+        android:label="fragment_pilih_surah"
+        tools:layout="@layout/fragment_pilih_surah" />
+    <fragment
+        android:id="@+id/detailSambungAyatFragment"
+        android:name="com.fikrihaikal.qurancall.ui.sambungayat.detailsambungayat.DetailSambungAyatFragment"
+        android:label="fragment_detail_sambung_ayat"
+        tools:layout="@layout/fragment_detail_sambung_ayat" />
 </navigation>
